<resources>
    <string name="app_name">DatabaseTaskMvp</string>
    <string name="no_network_error">No Network</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="search_institutes">Search Institutes</string>
    <string name="courses_available">Courses Available:</string>
    <string name="phone">Phone:</string>
    <string name="email">Email:</string>
    <string name="institute_name">Institute Name</string>
    <string name="institute_address">Institute Address</string>
    <string name="institute_description">Institute Description</string>
    <string name="add_new_institute">Add New Institute</string>
    <string name="add">Add</string>
    <string name="please_enter_name">Please enter institute name</string>
    <string name="please_enter_address">Please enter institute address</string>
    <string name="please_enter_description">Please enter institute description</string>
    <string name="please_enter_phone">Please enter institute phone number</string>
    <string name="please_enter_email">Please enter institute email address</string>
    <string name="please_enter_courses">Please enter courses available</string>
    <string name="failed_to_add_institute">Failed to add Institute</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="failed_to_update">Failed to update Institute Info</string>
</resources>
