<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.databasetaskmvp.addinstituteinfo.AddInstituteActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp20">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_add_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/add_new_institute"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp18" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tl_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_add_new"
            android:layout_marginTop="@dimen/dp20"
            android:hint="@string/institute_name">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_institute_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp15" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tl_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tl_name"
            android:layout_marginTop="@dimen/dp10"
            android:hint="@string/institute_address">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_institute_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp15" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tl_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tl_address"
            android:layout_marginTop="@dimen/dp10"
            android:hint="@string/institute_description">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_institute_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp15" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/tl_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tl_description"
            android:layout_marginTop="@dimen/dp10"
            android:hint="@string/phone">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_institute_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp15" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/tl_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tl_phone"
            android:layout_marginTop="@dimen/dp10"
            android:hint="@string/email">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_institute_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLength="40"
                android:maxLines="1"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp15" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tl_courses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tl_email"
            android:layout_marginTop="@dimen/dp10"
            android:hint="@string/courses_available">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_courses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp15" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tl_courses"
            android:layout_marginTop="@dimen/dp40"
            android:background="@color/colorAccent"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="@dimen/sp18" />

    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>
